--- a/landing-page/src/App.css
+++ b/landing-page/src/App.css
@@ -2,11 +2,12 @@
   text-align: center;
 }
 
-.App-title {
+.App-header {
   
   display: block;
   margin-left: auto;
   margin-right: auto;
+  background-color: #ffffffe7;
 }
 
 .Paper {
@@ -14,3 +15,6 @@
   margin: 16px;
 }
 
+body {
+  background-color: #e0d9cd;
+}
