--- a/landing-page/src/App.css
+++ b/landing-page/src/App.css
@@ -11,7 +11,15 @@
 }
 
 .Paper {
+  display: inline-block;
+  width: 50%;
   padding: 8px;
+  margin: 16px;
+  
+}
+
+.TemplateCard {
+  max-width: 256px;
   margin: 16px;
 }
 
